DigIt CHANGE LOG
======================


2025/08/28 TDigIt_Sources.Get parameter list has been standardized;
           TDigIt_Sources.Get Added CreateParams param;
           TDigIt_Sources.Select always Create a new Params;
           FormProfiles always create our copy of Params and free it;

        27 Fix RefCount Exception in theBridge;
           Completed Profiles separation from UI (derived from TOpenArrayString);
           Completed FormProfiles (need some fix);
           Twain e WIA Files derived from TOpenArrayString;
           Change method name IDigIt_Params.OnSelected to Select;

        22 Edit Profiles with new TDigIt_Sources (does not work);

        21 Added TDigIt_Source_Common classes;
           Derived all Sources from TDigIt_Source_Common;

        20 Added Init,Release methods and Renamed OnSet to OnSelected in IDigIt_Params;
           Added Multiple Params Handle in IDigIt_Interface (Params_New, Params_Set);
           Added Get methods in TDigIt_Sources to get Multiple Source;
           Modified Select in TDigIt_Sources to call Get;
           Added ASource param to TDigIt_Sources.Take;
           Divided the management of Parameters into the various Sources;

        18 First write of Profiles Edit;

        14 Added Copy as is in ExportFiles as Images;
           Added Rulers MenuItems;
           Changed UI XML KeyNames and Added Rulers Load/Save;
           Changed Enabled of ImageManipulation to EnabledWorkArea;
           Added Clear of XML before Save Session;

        13 Added Rulers Change with PopupMenù;
           Added Some To-Do;

2025/07/30 Deleted use of TResolutionUnit in CropAreas (use my bgracontrols branch);
           Changed ConvertPaperToResolutionUnit to ConvertCmPaperTo;
           Deleted TEMPORARY Unit Convert Functions;
           Changed MainForm edCropUnit_Type Items to Physical Units;
           Re Added BGRAControls define;

        29 Added Session can use of External Bitmap (let's save memory);